--- a/styles/temples.css
+++ b/styles/temples.css
@@ -56,6 +56,10 @@ nav li:hover a {
   font-weight: bold;
 }
 
+nav a:hover {
+  text-decoration: underline;
+}
+
 #hamburger {
   display: block;
   font-size: 2rem;
