--- a/styles/temples.css
+++ b/styles/temples.css
@@ -10,6 +10,10 @@ h2 {
   font-style: normal;
 }
 
+img {
+  max-width: 100%;
+}
+
 body {
   font-family: "Roboto", sans-serif;
   font-weight: 300;
