--- a/styles/country-page.css
+++ b/styles/country-page.css
@@ -1,159 +1,150 @@
-*{
-    padding:0;
-    margin:0;
-}
-
-body {
+:root {
+    --primary-text-color: #000; /* Black */
+    --secondary-text-color: #333; /* Dark gray (example) */
+    --accent-background-color: rgba(128, 196, 128, 0.507); /* Light green with transparency */
+    --box-background-color: #ccc; /* Light gray */
+    --border-color: #ccc; /* Light gray */
+    --white-color: #fff; /* White */
+  }
+  
+  * {
+    padding: 0;
+    margin: 0;
+  }
+  
+  body {
     font-family: "Roboto", sans-serif;
     font-weight: 300;
     font-style: normal;
-    max-width:500px;
+    max-width: 500px;
     margin: 1rem auto;
-    font-weight:bold;
+    font-weight: bold;
+    color: var(--secondary-text-color); /* Default text color */
   }
-
-header, footer{
-    text-align:center;
-    background:rgba(128, 196, 128, 0.507);
-    padding:1rem;
-}
-
-
-h1,
-h2 {
-  font-family: "Archivo Black", sans-serif;
-  font-weight: 600;
-  font-style: normal;
-  color:#000;
-  font-weight:bold;
-  text-align:center;
-}
-
-img {
-  max-width: 100%;
-}
-
-
-
-img{
-    max-width:100%;
-    height:100%;
-}
-
-.box-heading{
-    align-items:center;
-    text-align:center;
-    justify-content:center;
-    margin-bottom:1rem;
-
-}
-
-.weather-inner{
-    text-align:center;
-}
-
-.box{
-    margin:2rem;
-}
-
-
-.weather-box .box-heading h2::after{
-    content:"⛅";
-    width:42px;
-    display:block;
-    margin:auto;
-    
-   
+  
+  header,
+  footer {
+    text-align: center;
+    background: var(--accent-background-color);
+    padding: 1rem;
   }
-
-@media only screen and (min-width: 700px) {
+  
+  h1,
+  h2 {
+    font-family: "Archivo Black", sans-serif;
+    font-weight: 600;
+    font-style: normal;
+    color: var(--primary-text-color);
+    font-weight: bold;
+    text-align: center;
+  }
+  
+  img {
+    max-width: 100%;
+    height: 100%; /* Added to make image height responsive within its container */
+  }
+  
+  .box-heading {
+    align-items: center;
+    text-align: center;
+    justify-content: center;
+    margin-bottom: 1rem;
+  }
+  
+  .weather-inner {
+    text-align: center;
+  }
+  
+  .box {
+    margin: 2rem;
+  }
+  
+  .weather-box .box-heading h2::after {
+    content: "⛅";
+    width: 42px;
+    display: block;
+    margin: auto;
+  }
+  
+  @media only screen and (min-width: 700px) {
     body {
-        max-width:700px;
+      max-width: 700px;
     }
-   
- 
   }
-
-@media only screen and (min-width: 1000px) {
+  
+  @media only screen and (min-width: 1000px) {
     body {
-        max-width:1200px;
-        
+      max-width: 1200px;
     }
-
-    .box-heading{
-        background: #fff;
-        margin:1rem;
-        min-height:3rem;
-        padding:.5rem;
-        margin-left: -2rem;
-        max-width: 60%;
-        text-align:left;
+  
+    .box-heading {
+      background: var(--white-color);
+      margin: 1rem;
+      min-height: 3rem;
+      margin-left: -2rem;
+      max-width: 60%;
+      text-align: left;
+      display: flex; 
+      justify-content: flex-start;
+      padding:1rem;
     }
-    main{
-        position:relative;
+  
+    main {
+      position: relative;
     }
-    
-    .weather-div, .weather-div h2{
-        text-align:left;
+  
+    .weather-div,
+    .weather-div h2 {
+      text-align: left;
     }
-   
-
-    .box{
-        border: 1px solid #ccc;
-        background:#ccc;
-        padding:1rem;
-        margin:1rem;
-        max-width:300px;
+  
+    .box {
+      border: 1px solid var(--border-color);
+      background: var(--box-background-color);
+      padding: 1rem;
+      margin: 1rem;
+      max-width: 300px;
     }
-
-   
-    .weather-div{
-        position:absolute;
-        top:1rem;
-        margin:2rem;
-        width:100%;
-        height: 100%;
+  
+    .weather-div {
+      position: absolute;
+      top: 1rem;
+      margin: 2rem;
+      width: 100%;
+      height: 100%;
     }
-
-    .weather-inner{
-        position:relative;
-        height: 100%;
+  
+    .weather-inner {
+      position: relative;
+      height: 100%;
     }
-
-    .weather-box{
-        position:absolute;
-        right:2rem;
-        bottom: 4rem;
+  
+    .weather-box {
+      position: absolute;
+      right: 2rem;
+      bottom: 4rem;
     }
-
-    .box-heading{
-        display:flex;
-    }
-
+  
     .info-container {
-        
-        padding: 15px;
-        margin: 10px;
-        
-      }
-      .info-item {
-        margin-bottom: 8px;
-      }
-      .info-label {
-        font-weight: bold;
-      }
-
-      .weather-box .box-heading h2{
-        display:flex;
-        align-items:center;
-      }
-
-      .weather-box .box-heading h2::after{
-        content:url(/images/weather_clouds_storm_sunny_icon_svg.svg);
-        width:42px;
-       
-      }
- 
+      padding: 15px;
+      margin: 10px;
+    }
+  
+    .info-item {
+      margin-bottom: 8px;
+    }
+  
+    .info-label {
+      font-weight: bold;
+    }
+  
+    .weather-box .box-heading h2 {
+      display: flex;
+      align-items: center;
+    }
+  
+    .weather-box .box-heading h2::after {
+      content: url(/images/weather_clouds_storm_sunny_icon_svg.svg);
+      width: 42px;
+    }
   }
-
- 
